<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- main -->
    <string name="app_name">Reddit Roulette</string>

    <!-- home -->
    <string name="go_btn">Play Reddit Roulette</string>
    <string name="what_is_this"><u>What is this?</u></string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_image">Processing image&#8230;</string>
    <string name="downloading_image">Downloading image&#8230;</string>
    <string name="loading_web">Loading web data&#8230;</string>
    <string name="verifying_subreddit">Verifying subreddit&#8230;</string>
    <string name="finding_next_post">Finding next post&#8230;</string>

    <!-- errors / toasts -->
    <string name="image_load_error">Error loading image</string>
    <string name="url_load_error">Error loading URL</string>
    <string name="api_load_error">Error loading data from Reddit API</string>
    <string name="no_internet">No data connection available</string>
    <string name="load_too_many">Oops, you’re trying to load too many at once.</string>

    <!-- menu -->
    <string name="menu_actions">Actions</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login to Save Posts</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_info">Info</string>
    <string name="menu_next">Next</string>
    <string name="menu_external">Open in Browser</string>
    <string name="menu_save">Save Post</string>
    <string name="menu_unsave">Unsave Post</string>
    <string name="menu_set_image_as">Set As Wallpaper</string>

    <!-- prefs -->
    <string name="pref_over18_title">Allow NSFW Content</string>
    <string name="pref_over18_summary">Are you over eighteen and willing to download and view adult content?</string>
    <string name="pref_over19_alert_title">Allow NSFW Content</string>
    <string name="pref_over19_alert_msg">Reddit Roulette is an app that picks content randomly off Reddit. Are you over eighteen and willing to allow adult content in the selection?</string>
    <string name="pref_over19_yes">Yes, Allow NSFW</string>
    <string name="pref_over19_no">No, PG content only!</string>
    <string name="pref_write_error">Error writing preferences; please try again.</string>
    <string name="pref_selfpost_title">Show self posts</string>
    <string name="pref_selfpost_summary">By default, self posts are filtered out; this will keep them in the mix.</string>
    <string name="pref_swipe_left_title">Swipe for Next Post</string>
    <string name="pref_swipe_left_summary">Swiping left on an image will load the next post and right the previous. This will not work on web content.</string>
    <string name="pref_subreddits_title">Manage Subreddits</string>

    <!-- generic dialog -->
    <string name="dialog_close">Close</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_no">No, Cancel</string>

    <!-- info dialog -->
    <string name="dialog_external">Open in Browser</string>
    <string name="dialog_open_comments">View Comments</string>
    <string name="dialog_thing_comments">Number of Comments</string>
    <string name="dialog_thing_score">Score</string>

    <!-- wallpaper dialog -->
    <string name="dialog_wall_msg">Would you like to set this image as your wallpaper?</string>
    <string name="dialog_wall_yes">Yes, Set Wallpaper</string>
    <string name="dialog_wall_finished">Wallpaper now set</string>

    <!-- about -->
    <string name="about_desc">Reddit Roulette is a simple app that serves one function: press a button and get a random image or link off of Reddit. Will be a picture of space, will be a cat, will you find something not so pleasant? Who knows, Reddit is a strange and vast place.</string>
    <string name="about">About</string>
    <string name="about_like_btn">Like it? Rate it!</string>

    <!-- subreddit -->
    <string name="sub_add">Add Subreddit</string>
    <string name="sub_confirm_delete">Are you sure you would like to remove subreddit <b>%s</b>?</string>
    <string name="sub_confirm_delete_btn">Confirm Remove</string>
    <string name="sub_delete_title">Remove Subreddit</string>
    <string name="sub_add_subtitle">Subreddit name</string>
    <string name="sub_add_btn">Add Subreddit</string>
    <string name="sub_revert">Revert to defaults</string>
    <string name="sub_revert_message">Would you like to revert subreddits to defaults, thus removing any subreddits that may have been added?</string>
    <string name="sub_revert_confirm">Yes, Revert to defaults</string>
    <string name="sub_add_name_req">Name is required.</string>
    <string name="sub_add_error">Error adding subreddit; please try again.</string>
    <string name="sub_error_retreive">Error retreiving subreddit info.</string>

    <!-- auth -->
    <string name="auth_login_success">Login successful</string>
    <string name="auth_login_failure">Error while authenticating. Please try again.</string>
    <string name="auth_logout">You have been logged out</string>
    <string name="auth_not_logged_in">Not logged in. Try logging in first.</string>

    <!-- save / unsave -->
    <string name="save_worked">Post saved.</string>
    <string name="save_failed">Post failed to save. Try again?</string>
    <string name="unsave_worked">Post unsaved.</string>
    <string name="unsave_failed">Post failed to unsave. Try again?</string>

</resources>
