<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:persistent="true"
        >

    <CheckBoxPreference
            android:title="@string/pref_over18_title"
            android:summary="@string/pref_over18_summary"
            android:key="allow_nsfw"
            />

    <CheckBoxPreference
            android:title="@string/pref_selfpost_title"
            android:summary="@string/pref_selfpost_summary"
            android:key="show_self"
            android:defaultValue="false"
            />

    <CheckBoxPreference
            android:title="@string/pref_swipe_left_title"
            android:summary="@string/pref_swipe_left_summary"
            android:key="swipe_left_next"
            android:defaultValue="true"
            />

    <PreferenceScreen android:title="@string/pref_subreddits_title">
        <intent android:action="com.jpiche.redditroulette.SubredditList" />
    </PreferenceScreen>

</PreferenceScreen>
