<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      tools:context=".activities.MainActivity"
        >

    <item android:id="@+id/info"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/menu_info"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/prev"
          android:icon="@android:drawable/ic_media_previous"
          android:title="@string/menu_next"
          android:showAsAction="ifRoom"
          android:visible="false"
          android:enabled="false"
            />

    <item android:id="@+id/next"
          android:icon="@android:drawable/ic_media_next"
          android:title="@string/menu_next"
          android:showAsAction="ifRoom"
            />

    <item android:id="@+id/save"
          android:title="@string/menu_save"
          android:showAsAction="never"
            />

    <item android:id="@+id/unsave"
          android:title="@string/menu_unsave"
          android:showAsAction="never"
          android:enabled="false"
          android:visible="false"
            />
</menu>
