<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
        >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
            >

        <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sub_add"
                android:textColor="@color/white"
                android:padding="5dp"
                android:background="@color/dark_gray"
                android:minHeight="@dimen/dialog_info_button_height"
                android:gravity="center_vertical"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_add_subtitle"
                android:textAllCaps="true"
                android:paddingLeft="@dimen/dialog_info_item_padding"
                android:paddingTop="@dimen/dialog_info_item_padding"
                android:paddingRight="@dimen/dialog_info_item_padding"
                android:textSize="@dimen/dialog_info_item_title_fontsize"
                />

        <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dialog_info_item_padding"
                android:paddingBottom="@dimen/dialog_info_item_padding"
                android:paddingRight="@dimen/dialog_info_item_padding"
                android:textSize="@dimen/dialog_info_item_fontsize"
                android:focusable="true"
                />

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dialog_border"
                />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_info_button_height"
                android:orientation="horizontal"
                >
            <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/RRDialogButton"
                    android:text="@string/dialog_cancel"
                    />
            <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/dialog_border"
                    />
            <Button
                    android:id="@+id/addBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/RRDialogButton"
                    android:text="@string/sub_add_btn"
                    />

        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/partial_progress" />

</FrameLayout>